@@ -1,0 +1,19 @@
+/*=============================================================================
+    Boost.Wave: A Standard compliant C++ preprocessor library
+    http://www.boost.org/
+
+    Copyright (c) 2001-2006 Hartmut Kaiser. Distributed under the Boost
+    Software License, Version 1.0. (See accompanying file
+    LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
+=============================================================================*/
+
+#if !defined(inclusion)
+#   define  inclusion
+#   include __FILE__
+#   include "t_9_016.hpp"
+#else
+//R #line 18 "t_9_016.cpp"
+//R # define later
+#define EXPAND(x) x
+EXPAND(#) define later
+#endif
